Reinclusão de página de entrada
Subindo novamente alteração

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<div class="background-picture"></div>
+				<h2 class="first-txt">WingSec Security</h2>
+				<p class="second-txt">Soluções de segurança par ao seu negócio</p>
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
