--- a/index.html
+++ b/index.html
@@ -196,40 +196,34 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>Entre em contato conosco</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+											<input type="text" name="name" id="name" placeholder="Nome" />
 										</div>
 										<div class="field half">
 											<input type="email" name="email" id="email" placeholder="Email" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
+											<textarea name="message" id="message" placeholder="Deixe sua mensagem aqui"></textarea>
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
+										<li><input type="submit" value="Enviar" class="primary" /></li>
 									</ul>
 								</form>
 							</section>
 							<section>
-								<h2>Follow</h2>
+								<h2>Siga-nos</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/heikousens/KPMG-Tech-WingSec-1" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/company/kpmg-brasil/" class="icon brands style2 fa-linkedin"><span class="label">LikedIn</span></a></li>
+									<li><a href="https://cybertechkpmg-8uw2026.slack.com/home" class="icon brands style2 fa-slack"><span class="label">Slack</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+								<li>&copy; Todos os direitos reservados à CyberTech KPMG</li><li><li>Desenvolvedor: <a href="https://home.kpmg/br/pt/home/servicos/consultoria/risk-consulting/seguranca-cibernetica.html">KPMG</a></li>
 						</div>
 					</footer>
 
