--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="assets/js/boas_vindas.js"></script>
 	</head>
 	<body class="is-preload">
+				
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div class="background-picture"></div>
