--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">WingSec</span>
+									<span class="symbol"><img src="images/Logo4.png" alt="" /></span><span class="title">WingSec</span>
 								</a>
 
 							<!-- Nav -->
