--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Treinamento</a></li>
+							<li><a href="generic.html">Consultoria</a></li>
+							<li><a href="generic.html">Desenvolvimento de Sistemas</a></li>
+							<li><a href="elements.html">Sobre Nós</a></li>
 						</ul>
 					</nav>
 
